--- a/quote generator/index.html
+++ b/quote generator/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quote Generator</title>
+    <link rel="icon" type="image/png" href="https://s2.googleusercontent.com/s2/favicons?domain=jacinto.design">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
-    <title>Quote Generator</title>
 </head>
 <body>
-
     <div class="quote-container" id="quote-container">
         <!-- Quote -->
         <div class="quote-text">
@@ -28,9 +27,10 @@
             <button id="new-quote">New Quote</button>
         </div>
     </div>
+    <!-- Loader -->
     <div class="loader" id="loader"></div>
-
-    <script src="quotes.js"></script>
+    <!-- Script -->
+    <!-- <script src="quotes.js"></script> -->
     <script src="script.js"></script>
 </body>
 </html>
